syntax = "proto3";

package pb;

option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
	string id = 1;
	double price = 2;
	double tax = 3;
}

message ListOrdersRequest {
	int32 page = 1;
	int32 limit = 2;
	string sort = 3;
	string sort_dir = 4;
}

message ListOrdersResponse {
	repeated Order orders = 1;
}

message Order {
	string id = 1;
	double price = 2;
	double tax = 3;
	double final_price = 4;
}

service OrderService {
	rpc CreateOrder (CreateOrderRequest) returns (Order);
	rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}